# early-service-example

./: README.md  early-service.c  early-service.spec  meson.build
conf/: early-service-initrd.service  early-service.service  early-service.sysusers  module-setup.sh
scripts/: create-rpm.sh
