# SPDX-License-Identifier: Apache-2.0

project('early-service', 'c',
        license: 'Apache-2.0')

executable('early-service', 'early-service.c',
           install: true,
           dependencies: [dependency('glib-2.0'),
                          dependency('gio-2.0'),
                          dependency('gio-unix-2.0')])
